<?xml version="1.0" encoding="utf-8"?>
<!--Made by: C1769948-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/flower_search"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">



                <ImageView
                    android:id="@+id/flowerIdentify"
                    android:src="@drawable/ic_flowervector"
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:minHeight="40dp"
                    android:layout_height="wrap_content" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/identifyFlowerMessage"
                    android:layout_marginLeft="10dp"
                    android:textSize="20sp"
                    android:layout_toRightOf="@id/flowerIdentify"
                    android:layout_marginTop="15dp"
                    android:layout_width="270dp"
                    android:text="@string/flower_sighting"
                    android:maxLines="1"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/location_n_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/flower_search"
                android:layout_marginTop="13dp"
                android:background="@android:drawable/dialog_holo_light_frame">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:background="#fff">

                    <ImageView
                        android:id="@+id/search_location"
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/ic_search" />

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/locationField"
                        android:layout_width="270dp"
                        android:layout_height="20dp"
                        android:layout_marginBottom="15dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="20dp"
                        android:layout_toRightOf="@id/search_location"
                        android:background="@android:color/transparent"
                        android:hint="@string/location"
                        android:maxLines="2"
                        android:textSize="18sp" />
                </RelativeLayout>


            </RelativeLayout>

            <Spinner
                android:id="@+id/addressSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/location_n_search"
                android:layout_marginTop="20dp">
            </Spinner>


            <FrameLayout
                android:id="@+id/flower_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/addressSpinner"
                android:background="@android:drawable/dialog_holo_light_frame">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/flowerField"
                    android:layout_width="@dimen/field_width"
                    android:layout_alignStart="@+id/flower_container"
                    android:layout_below="@+id/addressSpinner"
                    android:background="@android:color/transparent"
                    android:hint="@string/flower_type"
                    android:layout_marginBottom="15dp"
                    android:textSize="18sp"
                    android:layout_marginTop="20dp"
                    android:maxLines="2"
                    android:paddingStart="20dp"
                    android:layout_height="20dp"/>
            </FrameLayout>


            <FrameLayout
                android:id="@+id/num_of_bee_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/location_n_search"
                android:layout_below="@+id/flower_container"
                android:layout_marginTop="25dp"
                android:background="@android:drawable/dialog_holo_light_frame">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/numOfBees"
                    android:layout_width="@dimen/field_width"
                    android:layout_height="20dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="20dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/number_of_bees_spotted_on_the_flower"
                    android:maxLines="2"
                    android:paddingStart="20dp"
                    android:textSize="18sp" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/description_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/num_of_bee_container"
                android:layout_below="@+id/num_of_bee_container"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="0dp"
                android:background="@android:drawable/dialog_holo_light_frame">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/descriptionField"
                    android:layout_width="@dimen/field_width"
                    android:layout_height="90dp"
                    android:textSize="18sp"
                    android:background="@android:color/transparent"
                    android:hint="@string/any_further_details"
                    android:maxLines="20"
                    android:padding="15dp" />
            </FrameLayout>

            <RelativeLayout
                android:id="@+id/button_container"
                android:layout_below="@+id/description_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="5dp"
                android:background="@android:drawable/dialog_holo_light_frame">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/submit"
                    android:layout_width="150dp"
                    android:layout_height="60dp"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/button_background"
                    android:text="@string/submit"
                    android:textAllCaps="false"
                    android:textColor="@color/button_text_color"
                    android:textSize="@dimen/default_small_text_size"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0" />
            </RelativeLayout>

        </RelativeLayout>


    </ScrollView>


</RelativeLayout>
