...
                android:layout_alignParentStart="true"
                android:layout_below="@+id/button_camera"
                android:layout_marginTop="50dp"
                android:gravity="bottom">

                <ImageView
                    android:id="@+id/button_no_image_upload"
                    android:layout_width="70dp"
                    android:layout_height="55dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginBottom="21dp"
                    android:layout_marginStart="11dp"
...
