...
    <string name="home_button_label_form">Upload Information w/out picture</string>
    <string name="home_button_label_gallery">Upload Picture from Gallery</string>

    <string name="channel_name">First Notification</string>
    <string name="channel_description">Notification for X</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="drawer_menu_item_home">Home</string>
    <string name="drawer_menu_item_howto">How To</string>
...
    <string name="notification_title">Spot a Bee</string>
    <string name="notification_content_text">Help the Bees</string>
    <string name="open_your_guide">Open your guide</string>
    <string name="open_your_spot_a_bee_guide">Open your Spot a Bee PDF</string>
    <string name="pdf_download_channel_description">PDF Download</string>
    <string name="pdf_notification_channel_name">Spot a Bee</string>
    <string name="error_toast_message_pay_pal">Please enter numerical characters only. E.g, 10 for $10</string>
    <string name="make_sure_you_sign_in_for_score_message">Make sure you log in next time to add to your score!</string>
    <string name="database_commit_error_message">Sorry. An error occurred. We can\'t save your information right now...</string>
    <string name="good_image_of_a_plant_text">The image on the right is a good plant image, as we can see the entire plant in a clear image. On the right, the image is a bit zoomed in, so we can\'t see the entire flower and would have a hard time guessing what plant that is.</string>
    <string name="donation_amount">Donation amount</string>
    <string name="help_spot_a_bee_by_making_a_donation_to_support_our_research">Help Spot a Bee by making a donation to support our research</string>
    <string name="test_donation">You have donated $17 to Spot A Bee</string>
...
