<?xml version="1.0" encoding="utf-8"?>
<!--Made by: C1717381-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.assignment.spotabee.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <!--<ScrollView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent">-->

        <!--<FrameLayout-->
            <!--android:id="@+id/content_frame"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent" />-->

    <!--</ScrollView>-->


    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    

</RelativeLayout>
